bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value message
message=""
^BDR2:3: error: not found: value message
  message=readMessage()
  ^BDR2:4: error: not found: value message
  message match {
  ^